tests/models/struct/unnamed/u16/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1.0)]
    u16
);
fn main() {}
